# AtomicOrbitals

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  article.mplstyle  main.cpp  makefile  plot_atom.py  plot_fast.py  plot_molecule.py  requirements.txt
.cache/clangd/index/: AlignedBox.h.8D202251EB294601.idx  AngleAxis.h.F440238BE137EE97.idx  ArithmeticSequence.h.1CAF115A5EE3CE08.idx  Array.h.E0910EDDBBC5AC10.idx  ArrayBase.h.56ECA88DA2C19E2D.idx  ArrayCwiseBinaryOps.h.B7863992F8E3978D.idx  ArrayCwiseUnaryOps.h.2E54E5820F0DFBC5.idx  ArrayWrapper.h.215DCEB81C1F3A6C.idx  Assign.h.B15EC9831D63C0CF.idx  AssignEvaluator.h.A9F67782419EC735.idx  AssignmentFunctors.h.439B80CC35EF942C.idx  BDCSVD.h.D191D5A64D68320E.idx  BFloat16.h.11B936913CD5C690.idx  BandMatrix.h.A30ED155926C9AD1.idx  BinaryFunctors.h.95AAFE8E4D57BD30.idx  BlasUtil.h.06D62AC043C7816C.idx  Block.h.03EEF635A8603036.idx  BlockHouseholder.h.F2BB1A25458275FB.idx  BlockMethods.h.6AA62E2F6AAFD213.idx  BooleanRedux.h.EA034E7F9ABBD406.idx  Cholesky.8CADB8D73AE0032F.idx  ColPivHouseholderQR.h.22C383FF827BE6B5.idx  CommaInitializer.h.2C2959CCE0794CA9.idx  CommonCwiseBinaryOps.h.F411CA3935B48BB1.idx  CommonCwiseUnaryOps.h.7AF1365F7674E97A.idx  CompleteOrthogonalDecomposition.h.6FEBEC127ECD6F25.idx  Complex.h.2C356DADCD55873C.idx  Complex.h.3563AB66DB3F833D.idx  ComplexEigenSolver.h.C0C19986EEBC2726.idx  ComplexSchur.h.39BB975BC849B228.idx  ConditionEstimator.h.804EC4636AAA1CD6.idx  ConfigureVectorization.h.EF5976710650772B.idx  ConjHelper.h.4273C302C029E61F.idx  Constants.h.17D96B1401310FA1.idx  Core.A87BBDE65ED73DB3.idx  CoreEvaluators.h.E606923373B832BE.idx  CoreIterators.h.79F4A6860D749CC6.idx  CwiseBinaryOp.h.EF59B4496A40080D.idx  CwiseNullaryOp.h.BCE394826871042F.idx  CwiseTernaryOp.h.B3A132B5F516F218.idx  (+190 more)
data/: atomic_energies.out  experimental_binding_energies.csv  h2-631g(dp).out  h2-ugbs.out  molecular_optimization.out
data/BasisSet/: 3-21g.basis  6-31g(d,p).basis  6311ppG.basis  cc-pvtz.basis  sto.basis  ugbs.basis
data/BasisSet/sto6g/: aluminum.basis  antimony.basis  argon.basis  arsenic.basis  beryllium.basis  boron.basis  bromine.basis  cadmium.basis  calcium.basis  carbon.basis  chlorine.basis  chromium.basis  cobalt.basis  copper.basis  fluorine.basis  gallium.basis  germanium.basis  helium.basis  hydrogen.basis  indium.basis  iodine.basis  iron.basis  krypton.basis  lithium.basis  magnesium.basis  manganese.basis  molybdenum.basis  neon.basis  nickel.basis  niobium.basis  nitrogen.basis  oxygen.basis  palladium.basis  phosphorus.basis  potassium.basis  rhodium.basis  rubidium.basis  ruthenium.basis  scandium.basis  selenium.basis  (+14 more)
data/BasisSet/ugbs/: antimony.basis  argon.basis  arsenic.basis  astatine.basis  barium.basis  beryllium.basis  bismuth.basis  boron.basis  bromine.basis  cadmium.basis  calcium.basis  carbon.basis  cesium.basis  chlorine.basis  chromium.basis  copper.basis  fluorine.basis  gallium.basis  gold.basis  hafnium.basis  helium.basis  hydrogen.basis  iodine.basis  iridium.basis  iron.basis  krypton.basis  lead.basis  manganese.basis  mercury.basis  molybdenum.basis  neon.basis  niobium.basis  nitrogen.basis  osmium.basis  palladium.basis  phosphorus.basis  platinum.basis  polonium.basis  radon.basis  rhenium.basis  (+17 more)
docs/: Doxyfile
helpers/: 631g.txt  atom_list.py  basis_parser.py  requirements.txt  symbolic_electron_electron_integral.py  symbolic_laplacian.py  symbolic_overlap.py  symbolic_slater_braket.py  ugbs.txt
include/: basis_parser.hpp  concepts.hpp  parse_basis.hpp
include/Atom/: atom.hpp  atom.interface.hpp  atom_list.hpp  beryllium.hpp  helium.hpp  molecule.hpp  molecule.interface.hpp  system.hpp
include/BasisSet/: basis_set.hpp  contracted_orbital.hpp  contracted_orbital.interface.hpp  gaussian_contracted.hpp  gaussian_primitive.hpp  orbital.hpp  slater_contracted.hpp  slater_primitive.hpp
include/HartreeFock/: hamiltonian.hpp  hartree_fock.hpp  hartree_fock.interface.hpp  restricted_hartree_fock.cpp  restricted_hartree_fock.hpp  restricted_hartree_fock.interface.hpp  unrestricted_hartree_fock.hpp
include/Integrators/: electron_electron_integral.hpp  electron_nucleus.hpp  electron_nucleus_integral.hpp  exchange_integral.hpp  integrator.hpp  integrators.hpp  laplacian.hpp  laplacian_integral.hpp  overlap_contracted.hpp  overlap_integral.hpp  overlap_primitive.hpp  slater_braket.hpp  slater_integrator.hpp
include/Maths/: factorial.hpp  hermite_gaussian_coeff.hpp  hermite_integral.hpp  slater_braket.hpp  tensor3D.hpp  tensor4D.hpp  the_boys.hpp  wigner_3j.hpp
include/Numerov/: minimisation.hpp  numerov.hpp  sol_radiale.hpp
include/Orbitals/: contracted_gaussian.hpp  contracted_orbital.hpp  contracted_orbital.interface.hpp  gaussian_primitive.hpp  orbital.hpp  slater_primitive.hpp
include/Utils/: clock.hpp  misc.hpp  string_fun.hpp  to_lowercase.hpp  yoshimine.hpp
scripts/: affichage.py  plot_atom.py  plot_fast.py  plot_molecule.py  plot_optimization.py
src/: basis_parser.cpp  main.cpp  parse_basis.cpp
src/Atom/: atom.cpp  molecule.cpp
src/BasisSet/: contracted_orbital.cpp  gaussian_primitive.cpp  slater_contracted.cpp  slater_primitive.cpp
src/HartreeFock/: hamiltonian.cpp  hartree_fock.cpp  restricted_hartree_fock.cpp  unrestricted_hartree_fock.cpp
src/Integrators/: electron_electron.cpp  electron_electron_integral.cpp  electron_nucleus.cpp  electron_nucleus_integral.cpp  exchange_integral.cpp  laplacian.cpp  laplacian_integral.cpp  overlap_integral.cpp  overlap_primitive.cpp  slater_integrator.cpp
src/Maths/: hermite_gaussian_coeff.cpp  hermite_integral.cpp  the_boys.cpp
src/Numerov/: minimisation.cpp  numerov.cpp  sol_radiale.cpp
src/Orbitals/: contracted_gaussian.cpp  contracted_orbital.cpp  gaussian_primitive.cpp  slater_primitive.cpp
src/Utils/: clock.cpp  misc.cpp  string_fun.cpp  to_lowercase.cpp
test/: electron_electron_integral.cpp  gaussian_primitive.cpp  gaussian_tabulated_values.hpp  laplacian_test.cpp  overlap_test.cpp  slater_braket.cpp  slater_contracted.cpp  slater_primitive.cpp  wigner.cpp
